--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -58,6 +58,10 @@ body {
     .green {
         color: $ui-green;
     }
+
+    .purple-red {
+        color: $ui-purple-red;
+    }
     
     .navbar,
     .navbar-default .navbar-brand,
